--- a/_pages/global.html
+++ b/_pages/global.html
@@ -75,13 +75,13 @@ author_profile: true
 
   .intro-text {
       margin-top: 20px;
-      margin-bottom: 20px; /* Controls the space between the introduction and the first title */
+      margin-bottom: 10px; /* Controls the space between the introduction and the first title */
   }
   
   .global-grid {
     display: flex;
     flex-direction: column;
-    gap: 30px; /* Narrowed the vertical space between sections */
+    gap: 25px; /* Narrowed the vertical space between sections */
   }
 
   .program {
@@ -95,7 +95,7 @@ author_profile: true
 /*       margin-bottom: 3px; /* Controls space between title and location */ */
   }
 
-  .program-locdate {
+  .locdate {
     margin-top: 3px; /* Adjust space above the location */
     margin-bottom: 3px; /* Adjust space below the location if needed */
   }
