--- a/_pages/global.html
+++ b/_pages/global.html
@@ -96,12 +96,12 @@ author_profile: true
   }
 
   .locdate {
-    margin-top: 3px; /* Adjust space above the location */
-    margin-bottom: 3px; /* Adjust space below the location if needed */
+    margin-top: 0px; /* Adjust space above the location */
+    margin-bottom: 0px; /* Adjust space below the location if needed */
   }
 
    .feeling-section {
-      font-family: "Georgia", serif; /* Special font for feeling section */
+/*       font-family: "Georgia", serif; /* Special font for feeling section */ */
       font-weight: bold; /* Make the font bold */
       color: #555; /* Slightly muted color for emphasis */
       margin-bottom: 5px;
