--- a/_pages/global.html
+++ b/_pages/global.html
@@ -13,7 +13,7 @@ author_profile: true
   <div class="program">
     <h3 class="program-title">Academic Exchange to Institute of Machine Tools and Factory Management (IWF), Technische Universität Berlin (TUB) and Fraunhofer IPK</h3>
     <p class="locdate"><em>Berlin, Germany</em><br>Aug, 2024</p>
-    <p class="feeling-section">Learned about advanced manufacturing techniques such as additive manufacturing and robotic machining, and gained insight into Germany’s industrial and academic landscape.</p>
+    <p class="feeling-section">Gained knowledge of advanced manufacturing techniques, including robotic machining, reconfigurable machine tools, and robotic 3C assembly, while also gaining insights into Germany’s societal, industrial, and academic landscape.</p>
     <div class="program-images">
       <img src="/images/TUB-1.jpg" alt="TUB Image 1" class="program-image">
       <img src="/images/TUB-2.jpg" alt="TUB Image 2" class="program-image">
@@ -92,19 +92,17 @@ author_profile: true
 
   .program-title {
       font-size: 1.3em; /* Font size for the program titles */
-/*       margin-bottom: 3px; /* Controls space between title and location */ */
   }
 
   .locdate {
-    margin-top: 0px; /* Adjust space above the location */
-    margin-bottom: 0px; /* Adjust space below the location if needed */
+    margin-top: -5px; /* Adjust space above the location */
+    margin-bottom: -5px; /* Adjust space below the location if needed */
   }
 
-   .feeling-section {
-/*       font-family: "Georgia", serif; /* Special font for feeling section */ */
-      font-weight: bold; /* Make the font bold */
-      color: #555; /* Slightly muted color for emphasis */
-      margin-bottom: 5px;
+  .feeling-section {
+    font-weight: bold; /* Make the font bold */
+    color: #555; /* Slightly muted color for emphasis */
+    margin-bottom: 5px;
   }
   
 
@@ -118,7 +116,6 @@ author_profile: true
     height: 270px; /* Fixed height for consistency */
     object-fit: cover; /* Maintain aspect ratio, crop if necessary */
   }
-
 
   
 </style>
