--- a/_pages/global.html
+++ b/_pages/global.html
@@ -23,7 +23,7 @@ author_profile: true
   <div class="program">
     <h3 class="program-title">Delegate at Yenching Global Symposium 2024 (YGS 2024)</h3>
     <p class="locdate"><em>Beijing, China</em><br>Apr, 2024</p>
-    <p class="feeling-section">Discussed global issues such as climate change and technological innovation, focusing on sustainable futures and inclusive development.</p>
+    <p class="feeling-section">One discussion I found particularly engaging focused on AI ethics and data security, highlighting how AI is evolving faster than legal frameworks. Data is now a vital resource, akin to petroleum, raising questions about how law can balance data usage for AI-driven productivity with privacy protection. There was also debate around the geopolitical challenges of one country exploiting another's data, particularly between two AI superpowers, and how such conflicts could be addressed under evolving international law.</p>
     <div class="program-images">
       <img src="/images/YGS-1.jpg" alt="YGS Image 1" class="program-image">
       <img src="/images/YGS-2.jpg" alt="YGS Image 2" class="program-image">
