--- a/_pages/global.html
+++ b/_pages/global.html
@@ -33,7 +33,7 @@ author_profile: true
   <div class="program">
     <h3 class="program-title">Delegate at Global Youth Conference Dubai 2023</h3>
     <p class="locdate"><em>Dubai, UAE</em><br>Dec, 2023</p>
-    <p class="feeling-section">Had insightful discussions on empowering youth leadership for climate action.</p>
+    <p class="feeling-section">During my visit to Dubai and Abu Dhabi, I gained insights into their economic and social development, education systems, and the diverse workforce from Pakistan, India, and the Philippines. Experiencing the Middle East and Arabic world for the first time, I also explored the UAE’s commitment to climate action and its growing international influence, particularly during my visit to COP28 at Expo City.</p>
     <div class="program-images">
       <img src="/images/Dubai-1.jpg" alt="Dubai Image 1" class="program-image">
       <img src="/images/Dubai-2.jpg" alt="Dubai Image 2" class="program-image">
