--- a/_pages/global.html
+++ b/_pages/global.html
@@ -41,9 +41,10 @@ author_profile: true
   </div>
 
   <div class="program">
-    <h3 class="program-title">Core-organizer at 1st Tsinghua Global Youth Dialogue</h3>
+    <h3 class="program-title">Core-organizer at 1st Tsinghua Global Youth Dialogue (TGYD)</h3>
     <p class="locdate"><em>Shenzhen-Chengdu-Beijing, China</em><br>Aug, 2023</p>
-    <p class="feeling-section">Engaged with global youths on pressing issues, realizing the importance of youth-led dialogues in addressing global challenges.</p>
+    <p class="feeling-section">One of the most unforgettable experiences of my life, Tsinghua Global Youth Dialogue was a valuable platform for engaging global youth on pressing issues. It fostered learning, connection-building, and solution-crafting, especially in the face of international tensions and critical global challenges. This event wasn’t just for the youth of today, but for future generations, as we work together to shape a better world. Leading a 60-member group from 33 countries through three cities and successfully holding the dialogue at Tsinghua strengthened my leadership and forged lasting friendships. 
+As the TGYD’s United Youth Initiative states, “May our children and grandchildren inherit a world that reflects the best of what we know to be possible, guided always by the principles of courage, integrity, and selfless service."</p>
     <div class="program-images">
       <img src="/images/TGYD-1.jpg" alt="TGYD Image 1" class="program-image">
       <img src="/images/TGYD-2.jpg" alt="TGYD Image 2" class="program-image">
