--- a/_pages/global.html
+++ b/_pages/global.html
@@ -54,7 +54,7 @@ As the TGYD’s United Youth Initiative states, “May our children and grandchi
   <div class="program">
     <h3 class="program-title">Participant at Entrepreneurship Bootcamp held by Hong Kong University of Science and Technology (HKUST)</h3>
     <p class="locdate"><em>Hong Kong, China</em><br>Jul, 2023</p>
-    <p class="feeling-section">Attended meaningful sessions and engaged with the local startup environment.</p>
+    <p class="feeling-section">Witnessed Hong Kong's vibrant start-up environment, attended valuable business and investment courses, and visited Hong Kong Science & Technology Parks (HKSTP), home to many start-up incubators. Engaging with youth from across Asia inspired new start-up ideas and cultivated entrepreneurial skills, where dynamic exchanges constantly sparked fresh innovations.</p>
     <div class="program-images">
       <img src="/images/HKUST-1.jpg" alt="HKUST Image 1" class="program-image">
       <img src="/images/HKUST-2.jpg" alt="HKUST Image 2" class="program-image">
