--- a/_pages/global.html
+++ b/_pages/global.html
@@ -64,7 +64,7 @@ Witnessed Hong Kong's vibrant start-up environment, attended valuable business a
   <div class="program">
     <h3 class="program-title">Academic Exchange to University of Auckland</h3>
     <p class="locdate"><em>Auckland, New Zealand</em><br>Nov, 2019</p>
-    <p class="feeling-section">Gained deep insight into the local academic culture and explored research opportunities.</p>
+    <p class="feeling-section">I gained valuable insights into New Zealand's college education and research, particularly in acoustics, drone aerodynamics, machine vision, and path planning. One of the most fascinating experiences was witnessing the use of wind tunnels to optimize cyclists' helmets, bikes, and suits for reducing wind resistance. I also had the chance to explore New Zealand's stunning landscapes, including geothermal parks, massive ancient trees, and the breathtaking beauty of what is often called the last piece of clean land on the earth.</p>
     <div class="program-images">
       <img src="/images/UniversityofAuckland-1.jpg" alt="University of Auckland Image 1" class="program-image">
       <img src="/images/UniversityofAuckland-2.jpg" alt="University of Auckland Image 2" class="program-image">
