--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -6,13 +6,13 @@ author_profile: true
 ---
 
 <div class="projects">
-  <ul class="bibliography">
+  <ul class="bibliography" style="list-style: none; padding-left: 0;">
     <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
+      <div class="pub-row" style="display: flex; align-items: stretch;">
         <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/parking_demo_sample_1.gif" class="teaser img-fluid z-depth-1" style="width: 100%;">
+          <img src="/images/parking_demo_sample_1.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
         </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
           <div class="title">Automatic Parking System: Dynamics Model, MPC Control and Hybrid A* Planning for Self-parking Vehicles</div>
           <div class="author">ROB 599: Autonomous Vehicles, directed by Prof. Anouck Girard</div>
           <div class="periodical"><em>09/2023 ~ 12/2023, University of Michigan</em></div>
@@ -25,11 +25,11 @@ author_profile: true
     </li>
 
     <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
+      <div class="pub-row" style="display: flex; align-items: stretch;">
         <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/horns_adaptve.gif" class="teaser img-fluid z-depth-1" style="width: 100%;">
+          <img src="/images/horns_adaptve.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
         </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
           <div class="title">Loc-NeRF++: An Enhanced Robot Localization using Neural Radiance Fields</div>
           <div class="author">ROB 530: Mobile Robotics, directed by Prof. Maani Ghaffari</div>
           <div class="periodical"><em>01/2023 ~ 04/2023, University of Michigan</em></div>
@@ -42,78 +42,7 @@ author_profile: true
       </div>
     </li>
 
-    <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/obstacle_avoidance_pushing_visualization.gif" class="teaser img-fluid z-depth-1" style="width: 100%;">
-        </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
-          <div class="title">Ordinary Differential Equation Based Learning Dynamics for Robotic Systems</div>
-          <div class="author">ROB 498: Robot Learning for Planning and Control, directed by Prof. Nima Fazeli and Dmitry Berenson</div>
-          <div class="periodical"><em>01/2023 ~ 04/2023, University of Michigan</em></div>
-          <div class="links">
-            <a href="https://drive.google.com/file/d/1eB448fKJZDSLUmQ_KLl00uL7lZmZ98Cu/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a>
-            <a href="https://github.com/JunShao0104/NDE-based-Robot-Learning-Dynamics" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a>
-          </div>
-        </div>
-      </div>
-    </li>
-
-    <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/eecs504_merge_drawing.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
-        </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
-          <div class="title">Depth-aware and Laplacian-steered Instance Style Transfer</div>
-          <div class="author">EECS 504: Computer Vision, directed by Prof. Andrew Owens</div>
-          <div class="periodical"><em>08/2022 ~ 12/2022, University of Michigan</em></div>
-          <div class="links">
-            <a href="https://drive.google.com/file/d/1H9Okz8tbjHv_lQ5klEtiOcg1wDveOEfS/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a>
-            <a href="https://github.com/JunShao0104/Depth-aware-and-Laplacian-steered-Instance-Style-Transfer" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a>
-          </div>
-        </div>
-      </div>
-    </li>
-
-    <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/armlab_1.gif" class="teaser img-fluid z-depth-1" style="width: 100%;">
-        </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
-          <div class="title">ArmLab: Autonomous Control, Block Detection, and Path Planning for a 5-DOF Robotic Manipulator</div>
-          <div class="author">ROB 550: Robotics Systems Laboratory, directed by Prof. Peter Gaskell</div>
-          <div class="periodical"><em>08/2022 ~ 10/2022, University of Michigan</em></div>
-        </div>
-      </div>
-    </li>
-
-    <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/Checkpoint1_high_speed_1.gif" class="teaser img-fluid z-depth-1" style="width: 100%;">
-        </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
-          <div class="title">BotLab: PID Control, SLAM and Exploration for a MBot</div>
-          <div class="author">ROB 550: Robotics Systems Laboratory, directed by Prof. Peter Gaskell</div>
-          <div class="periodical"><em>10/2022 ~ 12/2022, University of Michigan</em></div>
-        </div>
-      </div>
-    </li>
-
-    <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/soft_robot_drawing.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
-        </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
-          <div class="title">Design and Manufacturing of Soft Manipulator with Compound Structure</div>
-          <div class="author">Undergraduate Entrepreneurship Project, directed by Prof. Fujun Wang</div>
-          <div class="periodical"><em>05/2020 ~ 05/2021, Tianjin University</em></div>
-        </div>
-      </div>
-    </li>
+    <!-- Continue this structure for the rest of your projects -->
 
   </ul>
 </div>
