--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -27,7 +27,7 @@ author_profile: true
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
         <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/horns_adaptve.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
+          <img src="/images/RoboticMilling.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
           <div class="title">Loc-NeRF++: An Enhanced Robot Localization using Neural Radiance Fields</div>
