--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -27,7 +27,10 @@ author_profile: true
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
         <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/RoboticMilling.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
+          <video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
+            <source src="/images/RoboticMilling.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
           <div class="title">Loc-NeRF++: An Enhanced Robot Localization using Neural Radiance Fields</div>
@@ -41,6 +44,7 @@ author_profile: true
         </div>
       </div>
     </li>
+
 
     <!-- Continue this structure for the rest of your projects -->
 
