--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -7,40 +7,56 @@ author_profile: true
 
 <div class="projects">
   <ul class="bibliography" style="list-style: none; padding-left: 0;">
-    <li>
-      <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/Inconel718CuttingForceSim.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
-        </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
-          <div class="title">Automatic Parking System: Dynamics Model, MPC Control and Hybrid A* Planning for Self-parking Vehicles</div>
-          <div class="author">ROB 599: Autonomous Vehicles, directed by Prof. Anouck Girard</div>
-          <div class="periodical"><em>09/2023 ~ 12/2023, University of Michigan</em></div>
-          <div class="links">
-            <a href="https://drive.google.com/file/d/1p8DhpMSlSlAVXpF5hHZ6mfsdhTL23QI4/view?usp=drive_link" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a>
-            <a href="https://github.com/wdliu356/Automatic-Parking/tree/real_h_astar" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a>
-          </div>
-        </div>
-      </div>
-    </li>
 
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
           <video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
             <source src="/images/RoboticMilling.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
-          <div class="title">Loc-NeRF++: An Enhanced Robot Localization using Neural Radiance Fields</div>
-          <div class="author">ROB 530: Mobile Robotics, directed by Prof. Maani Ghaffari</div>
-          <div class="periodical"><em>01/2023 ~ 04/2023, University of Michigan</em></div>
+          <div class="title">Robotic Milling System Construction</div>
+          <div class="author">0.3 mm average absolute error, motion command delay under 7 ms on ABB’s PC SDK application</div>
+          <div class="periodical"><em>Sep. 2023 ~ Oct. 2024, Tsinghua University</em></div>
+          <p>More demonstration and code will be updated later.</p>
           <div class="links">
-            <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a>
-            <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a>
-            <a href="https://www.youtube.com/watch?v=g6yx-9psMI4" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Video</a>
+<!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
+<!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
+<!--             <a href="https://www.youtube.com/watch?v=g6yx-9psMI4" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Video</a> -->
           </div>
+        </div>
+      </div>
+    </li>
+    
+    <li>
+      <div class="pub-row" style="display: flex; align-items: stretch;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
+          <img src="/images/Inconel718CuttingForceSim.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
+        </div>
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
+          <div class="title">Thermomechanical simulation of Nickel-based Super Alloy(Inconel 718) using Abaqus</div>
+          <div class="author">Course: Finite Element Analysis, directed by Dr. Feng Feng</div>
+          <div class="periodical"><em>Sep. 2022 ~ Dec. 2022, Tsinghua University</em></div>
+          <p>More demonstration and code will be updated later.</p>
+          <div class="links">
+            <a href="https://drive.google.com/file/d/12mw5b99At_WTzta6cG_AqMIt4Da1wsAn/view?usp=drive_link" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a>
+<!--             <a href="https://github.com/wdliu356/Automatic-Parking/tree/real_h_astar" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
+          </div>
+        </div>
+      </div>
+    </li>
+
+    <li>
+      <div class="pub-row" style="display: flex; align-items: center;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
+          <img src="/images/soft_robot_drawing.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
+        </div>
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
+          <div class="title">Design and Manufacturing of Soft Manipulator with Compound Structure</div>
+          <div class="author">Undergraduate Entrepreneurship Project, directed by Prof. Fujun Wang</div>
+          <div class="periodical"><em>May. 2020 ~ May. 2021, Tianjin University</em></div>
         </div>
       </div>
     </li>
