--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -20,7 +20,7 @@ author_profile: true
           <div class="title">Robotic Milling System Construction</div>
           <div class="author">0.3 mm average absolute error, motion command delay under 7 ms on ABB’s PC SDK application</div>
           <div class="periodical"><em>Sep. 2023 ~ Oct. 2024, Tsinghua University</em></div>
-          <p>More demonstration and code will be updated later.</p>
+          <p>(More demonstration and code will be updated soon!)</p>
           <div class="links">
 <!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
 <!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
@@ -39,9 +39,9 @@ author_profile: true
           <div class="title">Thermomechanical simulation of Nickel-based Super Alloy(Inconel 718) using Abaqus</div>
           <div class="author">Course: Finite Element Analysis, directed by Dr. Feng Feng</div>
           <div class="periodical"><em>Sep. 2022 ~ Dec. 2022, Tsinghua University</em></div>
-          <p>More demonstration and code will be updated later.</p>
+          <p>(More demonstration and code will be updated soon!)</p>
           <div class="links">
-            <a href="https://drive.google.com/file/d/12mw5b99At_WTzta6cG_AqMIt4Da1wsAn/view?usp=drive_link" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a>
+            <a href="https://drive.google.com/file/d/12mw5b99At_WTzta6cG_AqMIt4Da1wsAn/view?usp=drive_link" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Slides</a>
 <!--             <a href="https://github.com/wdliu356/Automatic-Parking/tree/real_h_astar" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
           </div>
         </div>
@@ -50,7 +50,7 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 30%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
           <img src="/images/soft_robot_drawing.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
@@ -66,3 +66,9 @@ author_profile: true
 
   </ul>
 </div>
+
+<style>
+  .title {
+    font-weight: bold;
+  }
+</style>
