--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -61,7 +61,7 @@ author_profile: true
           <div class="title">Thermomechanical simulation of Nickel-based Super Alloy(Inconel 718) using Abaqus</div>
           <div class="author">Course: Finite Element Analysis, directed by Dr. Feng Feng</div>
           <div class="periodical"><em>Sep. 2022 ~ Dec. 2022, Tsinghua University</em></div>
-          <p>(More demonstration and code will be updated soon!)</p>
+          (More demonstration and code will be updated soon!)
           <div class="links">
             <a href="https://drive.google.com/file/d/12mw5b99At_WTzta6cG_AqMIt4Da1wsAn/view?usp=drive_link" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Slides</a>
 <!--             <a href="https://github.com/wdliu356/Automatic-Parking/tree/real_h_astar" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
