--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -33,10 +33,7 @@ author_profile: true
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
         <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
-          <video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
-            <source src="/images/Func_GA.jpg" type="video/mp4">
-            Your browser does not support the video tag.
-          </video>
+          <img src="/images/Func_GA.jpg" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
           <div class="title">Functionalization and prediction of end milling surface topography based on a quantitative indicator of chatter and forced vibration</div>
