--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -10,7 +10,7 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 50%; padding-right: 15px; padding-left: 15px;">
           <video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
             <source src="/images/RoboticMilling.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -20,7 +20,7 @@ author_profile: true
           <div class="title">Robotic Milling System Construction</div>
           <div class="author">0.3 mm average absolute error, motion command delay under 7 ms on ABB’s PC SDK application</div>
           <div class="periodical"><em>Sep. 2023 ~ Oct. 2024, Tsinghua University</em></div>
-          <p>(More demonstration and code will be updated soon!)</p>
+          (More demonstration and code will be updated soon!)
           <div class="links">
 <!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
 <!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
@@ -32,14 +32,14 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 50%; padding-right: 15px; padding-left: 15px;">
           <img src="/images/Func_GA.jpg" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
           <div class="title">Functionalization and prediction of end milling surface topography based on a quantitative indicator of chatter and forced vibration</div>
           <div class="author">Article under review: Vibration quantification, Surface topography online reconstruction, Physical mechanism with 1D CNN</div>
           <div class="periodical"><em>Oct. 2023 ~ Oct. 2024, Tsinghua University</em></div>
-          <p>(More demonstration and code will be updated soon!)</p>
+          (More demonstration and code will be updated soon!)
           <div class="links">
 <!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
 <!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
@@ -51,7 +51,7 @@ author_profile: true
     
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 50%; padding-right: 15px; padding-left: 15px;">
           <img src="/images/Inconel718CuttingForceSim.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
